Make logo smaller

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -7,4 +7,5 @@
   {% if site.social-links.youtube %}<li><a href="https://youtube.com/{{ site.social-links.youtube }}"><i class="fab fa-youtube fa-lg"></i></a></li>{% endif %}
   {% if site.social-links.googleplus %}<li><a href="https://plus.google.com/{{ site.social-links.googleplus }}"><i class="fab fa-google-plus fa-lg"></i></a></li>{% endif %}
   {% if site.social-links.email %}<li><a href="mailto:{{ site.social-links.email }}"><i class="far fa-envelope fa-lg"></i></a></li>{% endif %}
+  <li><img class="lac" src="images/lac.svg"/></li>
 </ul>
