--- a/themes/default/styles.scss
+++ b/themes/default/styles.scss
@@ -69,9 +69,9 @@ a:hover {
   text-align: center;
 }
 
-.footer .lac {
-  height: 100px;
-  width: 100px
+.lac {
+  height: 40px;
+  width: 40px;
 }
 
 //
