--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,5 +1,5 @@
 <ul class="social-links">
-  {% if site.social-links.github %}<li><a href="https://github.com/{{ site.social-links.github }}/org/projects/1"><i class="fab fa-github fa-lg"></i></a></li>{% endif %}
+  {% if site.social-links.github %}<li><a href="https://github.com/{{ site.social-links.github }}/org/issues"><i class="fab fa-github fa-lg"></i></a></li>{% endif %}
   {% if site.social-links.twitter %}<li><a href="https://twitter.com/{{ site.social-links.twitter }}"><i class="fab fa-twitter fa-lg"></i></a></li>{% endif %}
   {% if site.social-links.facebook %}<li><a href="https://facebook.com/{{ site.social-links.facebook }}"><i class="fab fa-facebook-square fa-lg"></i></a></li>{% endif %}
   {% if site.social-links.instagram %}<li><a href="https://instagram.com/{{ site.social-links.instagram }}"><i class="fab fa-instagram fa-lg"></i></a></li>{% endif %}
